# make_drafting

./: README.md  environment.yml  feature recognition.ipynb  pyproject.toml
notebooks/: 01_playground.ipynb  03_analytic_views.ipynb  analytic_views_check.ipynb  hlr_advanced+.ipynb  hlr_advanced+fuse_hlr_hidden.ipynb  hlr_advanced.ipynb  hlr_base.ipynb  hlr_compare_with_analytic.ipynb  test_details.ipynb
src/afr3d/: __main__.py
src/afr3d/drafting/: analytic.py  circles.py  drafting_vertices.py  model.py  plotting.py  views.py
src/afr3d/features/: __init__.py  cylinders.py  fillets.py  holes.py  slots.py
src/afr3d/geom/: primitives.py
src/afr3d/io/: step_import.py
src/afr3d/topo/: topology.py
src/afr3d/utils/: debug.py  logging.py
src/afr3d/views/: analytic.py  analytic_from_hlr.py  debugs.py  dimensioning.py  orientation.py  plotting.py  projections.py  utils.py  visibility.py
